fix: index.html page reinstated, custom classes have been created to avoid conflicts with fontawesome, added some comment in the html for more readability

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,33 @@
+/* Custom properties */
+:root {
+    /* icon color */
+    --icon-grey: rgb(129, 137, 143);
+
+    /* padding */
+    --padding-sm: 5px;
+
+    /* border radius */
+    --br-radius-sm: 5px;
+}
+
+/* Header */
 .navbar-brand img{
     width: 60px;
     height: auto;
 }
 
-.fa-pen,
-.fa-trash-can {
-    color: rgb(129, 137, 143);
-    padding: 5px;
+/* Table */
+.vd-icon-grey {
+    color: var(--icon-grey);
+    border-color: var(--icon-grey);
 }
 
-.fa-border {
-    border-color: rgb(129, 137, 143);
-    border-radius: 5px;
+.vd-pd-sm {
+    padding: var(--padding-sm);
+}
+
+.vd-br-radius-sm {
+    border-radius: var(--br-radius-sm);
 }
 
 .table button {
